--- a/mystyles.css
+++ b/mystyles.css
@@ -2,6 +2,6 @@ body{
     background-color: aquamarine; 
 } 
 h1{ 
-    color: rgb(0, 255, 94); 
+    color: rgba(233, 9, 9, 0.451); 
     margin-left: 25px; 
 }
